--- a/patient-service/src/main/resources/application.properties
+++ b/patient-service/src/main/resources/application.properties
@@ -16,6 +16,8 @@ server.port=4000
 logging.level.root = info
 management.endpoints.web.exposure.include=*
 management.endpoint.health.show-details=always
+spring.jackson.serialization.indent-output=true
+
 
 
 
