Added Kafka, service, kafka to docker and created a producer to produce events to kafka

--- a/patient-service/src/main/resources/application.properties
+++ b/patient-service/src/main/resources/application.properties
@@ -19,5 +19,5 @@ management.endpoint.health.show-details=always
 spring.jackson.serialization.indent-output=true
 
 
-
-
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.ByteArraySerializer
