--- a/patient-service/pom.xml
+++ b/patient-service/pom.xml
@@ -89,6 +89,12 @@
 			<version>4.29.1</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.kafka</groupId>
+			<artifactId>spring-kafka</artifactId>
+		</dependency>
+
+
 
 
 
