--- a/pom.xml
+++ b/pom.xml
@@ -8,5 +8,6 @@
     <modules>
         <module>patient-service</module>
         <module>billing-service</module>
+        <module>analytics-service</module>
     </modules>
 </project>
