--- a/pom.xml
+++ b/pom.xml
@@ -9,5 +9,6 @@
         <module>patient-service</module>
         <module>billing-service</module>
         <module>analytics-service</module>
+        <module>api-gateway</module>
     </modules>
 </project>
